Correct navigation overlap

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -95,6 +95,7 @@ header {
 }
 
 main {
+  padding-top: 5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
